# ObjectDetectionPostProcessing

code/: CMakeLists.txt
code/src/: HoughVotingScheme.cpp  HoughVotingScheme.h  MeanShift.cpp  MeanShift.h  ObjectDetectionPostProcessing.cpp  ObjectDetectionUtils.h
data/in/: 2007_000129_offset.txt  2007_000129_rects.txt
